--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.21",
     "expo": "~54.0.33",
+    "expo-apple-authentication": "~8.0.8",
     "expo-constants": "~18.0.13",
+    "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -45,8 +47,8 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0",
+    "eslint": "^4.1.1",
+    "eslint-config-expo": "^5.1.3",
     "typescript": "~5.9.2"
   },
   "private": true
